--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,29 @@
+# Dependencies
+node_modules/
+
+# Environment files (keep .env.example for reference)
 .env
-.node_modules
+.env.local
+.env.*.local
+!.env.example
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Uploads (use Cloudinary in production)
+uploads/*
+!uploads/.gitkeep
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+
+# Build output
+dist/
+build/
